# Juiceplug

./: .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md  USAGE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
examples/: quickstart.py  review_transcripts.py  router_example.py  train_reasoning_adapter.py
juiceplug/: __init__.py  core.py  embedding_router.py  router.py
juiceplug/adapters/: README.md
juiceplug/tools/: __init__.py  web_search.py
tests/: test_core.py  test_embedding_router.py  test_router.py  test_tools.py
