[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juiceplug"
version = "0.1.0"
description = "Plug-and-play reasoning adapters + live web tools for any LLM."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Arshveen Singh"},
]
keywords = ["llm", "lora", "reasoning", "tool-calling", "peft", "quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5",
    "duckduckgo-search>=6.1",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1",
    "transformers>=4.44",
    "peft>=0.11",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
]
router = [
    "sentence-transformers>=2.2",
]
train = [
    "torch>=2.1",
    "transformers>=4.44",
    "peft>=0.11",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "trl>=0.8",
    "datasets>=2.18",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/Arshveen-singh1/Juiceplug"
Repository = "https://github.com/Arshveen-singh1/Juiceplug"
Issues = "https://github.com/Arshveen-singh1/Juiceplug/issues"

[tool.setuptools.packages.find]
include = ["juiceplug*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
